--- a/Final_project/app/src/main/res/drawable/button_view.xml
+++ b/Final_project/app/src/main/res/drawable/button_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
-    <stroke android:color="#C6170B" android:width="3dp"/>
+    <stroke android:color="#87ceeb" android:width="3dp"/>
     <solid android:color="#FFFFFF"/>
-    <corners android:radius="999dp"/>
+    <corners android:radius="15dp"/>
 </shape>
